--- a/index.html
+++ b/index.html
@@ -605,7 +605,9 @@
                 <div class="three-columns">
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img"></span>
+                            <span class="news-link__img">
+                                <span class="news-link-shadow"></span>
+                            </span>
                         </a>
                         <div class="news-info">
                             <a href="#" class="text-news">
@@ -618,7 +620,9 @@
                 <div class="three-columns">
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img"></span>
+                            <span class="news-link__img">
+                                <span class="news-link-shadow"></span>
+                            </span>
                         </a>
                         <div class="news-info">
                             <a href="#" class="text-news">
@@ -629,7 +633,9 @@
                     </article>
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img" style="background: url(./images/news-img/wot_1.9.1_615x346.jpg) center/contain no-repeat;"></span>
+                            <span class="news-link__img" style="background: url(./images/news-img/wot_1.9.1_615x346.jpg) center/contain no-repeat;">
+                                <span class="news-link-shadow"></span>
+                            </span>
                         </a>
                         <div class="news-info">
                             <a href="#" class="text-news">
@@ -640,7 +646,9 @@
                     </article>
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img" style="background: url(./images/news-img/ekipazh1.jpg) center/contain no-repeat;"></span>
+                            <span class="news-link__img" style="background: url(./images/news-img/ekipazh1.jpg) center/contain no-repeat;">
+                                <span class="news-link-shadow"></span>
+                            </span>
                         </a>
                         <div class="news-info">
                             <a href="#" class="text-news">
@@ -653,7 +661,9 @@
                 <div class="three-columns">
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img" style="background: url(./images/news-img/1_5oifsmi_615x.jpg) center/contain no-repeat;"></span>
+                            <span class="news-link__img" style="background: url(./images/news-img/1_5oifsmi_615x.jpg) center/contain no-repeat;">
+                                <span class="news-link-shadow"></span>
+                            </span>
                         </a>
                         <div class="news-info">
                             <a href="#" class="text-news">
@@ -664,7 +674,9 @@
                     </article>
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img" style="background: url(./images/news-img/gudok_615x346.jpg) center/contain no-repeat;"></span>
+                            <span class="news-link__img" style="background: url(./images/news-img/gudok_615x346.jpg) center/contain no-repeat;">
+                                <span class="news-link-shadow"></span>
+                            </span>
                         </a>
                         <div class="news-info">
                             <a href="#" class="text-news">
@@ -675,7 +687,9 @@
                     </article>
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img" style="background: url(./images/news-img/bm_615.jpg) center/contain no-repeat;"></span>
+                            <span class="news-link__img" style="background: url(./images/news-img/bm_615.jpg) center/contain no-repeat;">
+                                <span class="news-link-shadow"></span>
+                            </span>
                         </a>
                         <div class="news-info">
                             <a href="#" class="text-news">
@@ -688,5 +702,53 @@
             </div>
         </div>
     </section>
+    <section class="main-heading" style="padding-bottom: 25px;margin-top: 25px;background: black;">
+        <img class="title-bacground" src="./images/title-bacground/referal-2019.jpg" style="height: 390px;object-position: center;" alt="">
+        <div class="container-box" style="padding: 45px 0;">
+            <div class="promo-block" style="text-align: center;width: 815px;">
+                <div class="limited-height">
+                    <div class="promo-title">
+                        <h3 class="promo-title__title">Приглашайте друзей — получайте танк!</h3>
+                        <p class="promo-title__text">Суть реферальной программы максимально проста: зовёте в «танки» друзей — зарабатываете крутые награды!</p>
+                        <div class="learn-more">
+                            <a href="#" class="learn-more__text">подробнее</a>
+                        </div>
+                    </div>
+                    <div class="logo-wot"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer class="footer-wrap">
+        <div class="footer-center">
+            <div class="footer-list">
+                <div class="footer-logo"></div>
+                <ul class="footer-menu">
+                    <li class="footer-menu_item">
+                        <a href="#" class="footer-menu_item__text">центер поддержки</a>
+                    </li>
+                    <li class="footer-menu_item">
+                        <a href="#" class="footer-menu_item__text">партнеры</a>
+                    </li>
+                    <li class="footer-menu_item">
+                        <a href="#" class="footer-menu_item__text">лицензионное соглашение</a>
+                    </li>
+                    <li class="footer-menu_item">
+                        <a href="#" class="footer-menu_item__text">политика конфедициальности</a>
+                    </li>
+                    <li class="footer-menu_item">
+                        <a href="#" class="footer-menu_item__text">правила игры</a>
+                    </li>
+                    <li class="footer-menu_item">
+                        <a href="#" class="footer-menu_item__text">карьера</a>
+                    </li>
+                    <li class="footer-menu_item">
+                        <a href="#" class="footer-menu_item__text">русский</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div class="rights-reserved">© 2009–2020 <span class="footer-cop"><a href="#" class="footer-cop__link">Wargaming.net</a></span> Все права защищены. Powered by BigWorld Technology™ © 12+</div>
+    </footer>
 </body>
 </html>
