--- a/index.html
+++ b/index.html
@@ -540,6 +540,19 @@
                     <a href="#" class="registration__text">зарегистрироваться</a>
                 </div>
             </div>
+            <div class="nav">
+                <div class="nav-blocks">
+                    <div class="nav-blocks__items"></div>
+                    <div class="nav-blocks__items"></div>
+                    <div class="nav-blocks__items"></div>
+                </div>
+                <div class="nav-blocks">
+                    <img  class="nav-blocks__icon" src="./images/logo-wot/download.svg" alt="">
+                </div>
+                <div class="nav-blocks">
+                    <div class="nav-blocks__img"></div>
+                </div>
+            </div>
         </div>
         <div class="main-headlines">
             <div class="cross"></div>
@@ -596,6 +609,12 @@
                     <a href="#" class="premium-store"></a>
                 </span>
             </div>
+            <div class="mini-store">
+                <a href="#" class="premium-bag">
+                    <span class="premium-bag__img"></span>
+                    <p class="premium-bag__text">премиум магазин</p>
+                </a>
+            </div>
         </div>
     </section>
     <section class="latest-news">
@@ -603,11 +622,11 @@
             <header class="columns-header">
                 <h2 class="columns-header__title">последние новости</h2>
             </header>
-            <div class="flex-blcks">
+            <div class="flex-blocks">
                 <div class="three-columns">
                     <article class="small-news">
                         <a href="#" class="news-link">
-                            <span class="news-link__img">
+                            <span class="news-link__img" style="background: url(./images/news-img/mortal-race-4.jpg) center/contain no-repeat;">
                                 <span class="news-link-shadow"></span>
                             </span>
                         </a>
@@ -704,23 +723,19 @@
             </div>
         </div>
     </section>
-    <section class="main-heading" style="padding-bottom: 25px;margin-top: 25px;background: black;">
-        <img class="title-bacground" src="./images/title-bacground/referal-2019.jpg" style="height: 390px;object-position: center;" alt="">
-        <div class="container-box" style="padding: 45px 0;">
-            <div class="promo-block" style="text-align: center;width: 815px;">
-                <div class="limited-height">
-                    <div class="promo-title">
-                        <h3 class="promo-title__title">Приглашайте друзей — получайте танк!</h3>
-                        <p class="promo-title__text">Суть реферальной программы максимально проста: зовёте в «танки» друзей — зарабатываете крутые награды!</p>
-                        <div class="learn-more">
-                            <a href="#" class="learn-more__text">подробнее</a>
-                        </div>
+    <div class="between-blocks">
+        <section class="about-invite" style="background: url(./images/title-bacground/referal-2019.jpg) center/cover;">
+            <div class="container-size">
+                <div class="promo-block">
+                    <h3 class="promo-block__title">Приглашайте друзей — получайте танк!</h3>
+                    <p class="promo-block__text">Суть реферальной программы максимально проста: зовёте в «танки» друзей — зарабатываете крутые награды!</p>
+                    <div class="learn-more">
+                        <a href="#" class="learn-more__text">подробнее</a>
                     </div>
-                    <div class="logo-wot"></div>
                 </div>
             </div>
-        </div>
-    </section>
+        </section>
+    </div>
     <footer class="footer-wrap">
         <div class="footer-center">
             <div class="footer-list">
