add block nav-wrap

--- a/index.html
+++ b/index.html
@@ -540,6 +540,116 @@
                     <a href="#" class="registration__text">зарегистрироваться</a>
                 </div>
             </div>
+            <div class="nav-wrap">
+                <div class="nav-wrap__flex">
+                    <div class="nav-wrap__holder">
+                        <ul class="sub-menu">
+                            <li class="sub-menu__items">
+                                <a class="sub-menu__links" href="#">игра</a>
+                                <span class="sub-menu__cross"></span>
+                            </li>
+                            <ul class="nav-detail">
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Скачать игру</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">МЕДИА</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новости</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Танковедение</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новичку</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">В разработке</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Календарь событий</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Руководство</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Экономика</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Достижения</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Обновления</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Безопасность</a></li>
+                            </ul>
+                            <li class="sub-menu__items">
+                                <a class="sub-menu__links" href="#">рейтинги</a>
+                                <span class="sub-menu__cross"></span>
+                            </li>
+                            <ul class="nav-detail">
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Скачать игру</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">МЕДИА</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новости</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Танковедение</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новичку</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">В разработке</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Календарь событий</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Руководство</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Экономика</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Достижения</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Обновления</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Безопасность</a></li>
+                            </ul>
+                            <li class="sub-menu__items">
+                                <a class="sub-menu__links" href="#">кланы</a>
+                                <span class="sub-menu__cross"></span>
+                            </li>
+                            <ul class="nav-detail">
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Скачать игру</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">МЕДИА</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новости</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Танковедение</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новичку</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">В разработке</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Календарь событий</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Руководство</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Экономика</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Достижения</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Обновления</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Безопасность</a></li>
+                            </ul>
+                            <li class="sub-menu__items">
+                                <a class="sub-menu__links" href="#">
+                                    <span class="sub-menu__logo"></span>
+                                    <span class="sub-menu__text">лет</span>
+                                </a>
+                            </li>
+                            <li class="sub-menu__items">
+                                <a class="sub-menu__links" href="#">турниры</a>
+                                <span class="sub-menu__cross"></span>
+                            </li>
+                            <ul class="nav-detail">
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Скачать игру</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">МЕДИА</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новости</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Танковедение</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новичку</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">В разработке</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Календарь событий</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Руководство</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Экономика</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Достижения</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Обновления</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Безопасность</a></li>
+                            </ul>
+                            <li class="sub-menu__items">
+                                <a class="sub-menu__links" href="#">сообщество</a>
+                                <span class="sub-menu__cross"></span>
+                            </li>
+                            <ul class="nav-detail">
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Скачать игру</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">МЕДИА</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новости</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Танковедение</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Новичку</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">В разработке</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Календарь событий</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Руководство</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Экономика</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Достижения</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Обновления</a></li>
+                                <li class="nav-detail__items"><a class="nav-detail__links" href="#">Безопасность</a></li>
+                            </ul>
+                        </ul>
+                        <div class="nav-wrap__block">
+                            <div class="nav-wrap__registration">
+                                <a class="nav-wrap__link" href="#">зарегистрироваться</a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="nav-wrap__jackdaw"></div>
+                </div>
+            </div>
             <div class="nav">
                 <div class="nav-blocks">
                     <div class="nav-blocks__items"></div>
