add img in html

--- a/index.html
+++ b/index.html
@@ -651,27 +651,27 @@
                     <div class="slider-block__arrows-two"></div>
                     <div class="slider-block__width">
                         <div class="slider-block__carousel">
-                            <div class="slider-block__img"></div>
+                            <div style="background: url(./images/slider/1-9-update.jpg) no-repeat right;" class="slider-block__img"></div>
                             <p class="slider-block__text">Обновление 1.9. Актуальная версия игры</p>
                         </div>
                         <div class="slider-block__carousel">
-                            <div class="slider-block__img"></div>
+                            <div style="background: url(./images/slider/playhome3.jpg) no-repeat right;" class="slider-block__img"></div>
                             <p class="slider-block__text">Участвуй в онлайн-турнирах</p>
                         </div>
                         <div class="slider-block__carousel">
-                            <div class="slider-block__img"></div>
+                            <div style="background: url(./images/slider/Q2nHXES.jpg) no-repeat right;" class="slider-block__img"></div>
                             <p class="slider-block__text">Боевой пропуск: уникальные награды в случайных боях</p>
                         </div>
                         <div class="slider-block__carousel">
-                            <div class="slider-block__img"></div>
+                            <div style="background: url(./images/slider/ref-2-0-615.jpg) no-repeat right;" class="slider-block__img"></div>
                             <p class="slider-block__text">Реферальная программа 2.0: третий сезона</p>
                         </div>
                         <div class="slider-block__carousel">
-                            <div class="slider-block__img"></div>
+                            <div style="background: url(./images/slider/specialoffers.jpg) no-repeat right;" class="slider-block__img"></div>
                             <p class="slider-block__text">Специальные предложения</p>
                         </div>
                         <div class="slider-block__carousel">
-                            <div class="slider-block__img"></div>
+                            <div style="background: url(./images/slider/wot_twitchprime.jpg) no-repeat right;" class="slider-block__img"></div>
                             <p class="slider-block__text">Акция «Прямой эфир». Набор «Звёздная ночь»</p>
                         </div>
                     </div>
@@ -714,7 +714,7 @@
                 <div class="three-columns">
                     <article class="three-columns__small-news">
                         <a href="#" class="three-columns__news-link">
-                            <span class="three-columns__img">
+                            <span class="three-columns__img" style="background: url(./images/news-img/20.05.14_10ani_act_2_1_1.jpg) center/contain no-repeat;">
                                 <span class="three-columns__link-shadow"></span>
                             </span>
                         </a>
