--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="shortcut icon" href="./images/icon/8783.750.ico" type="image/x-icon">
     <link rel="stylesheet" href="./style/style.css">
     <script src="./scripts/script.js" defer></script>
+    <script src="./scripts/slider.js" defer></script>
     <script src="./scripts/jquery-3.4.1.min.js"></script>
     <title>World of Tanks – Бесплатная Онлайн-игра про Танки</title>
 </head>
@@ -77,8 +78,8 @@
                                         <path fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B" class="showcase-list__change-color" d="M26.1,0C20.9,0,15.1,0,9.9,0l-7,3.9v26.8L18,39l15.1-8.3V3.9L26.1,0z M30.8,29.4l-12.8,7l-12.8-7V5.2l5.4-2.9
                                             c5,0,9.9,0,15,0l5.3,2.9V29.4z">
                                         </path>
-                                        <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B" class="showcase-list__change-color" points="21.6,16.1 25.9,13.7 25.9,11.2 20.6,11.2 20.6,9.7 23.2,7.7 23.2,5 12.8,5 12.8,7.7 15.4,9.7 
-                                            15.4,11.2 10.1,11.2 10.1,13.7 14.4,16.1 15.4,16.1 15.4,26 12.5,24.4 12.5,18.9 7.7,16.2 7.7,27.3 18,33 28.3,27.3 28.3,16.2 
+                                        <polygon fill-rule="evenodd" clip-rule="evenodd" fill="#9B9B9B" class="showcase-list__change-color" points="21.6,16.1 25.9,13.7 25.9,11.2 20.6,11.2 20.6,9.7 23.2,7.7 23.2,5 12.8,5 12.8,7.7 15.4,9.7
+                                            15.4,11.2 10.1,11.2 10.1,13.7 14.4,16.1 15.4,16.1 15.4,26 12.5,24.4 12.5,18.9 7.7,16.2 7.7,27.3 18,33 28.3,27.3 28.3,16.2
                                             23.5,18.9 23.5,24.4 20.6,26 20.6,16.1 	">
                                         </polygon>
                                     </g>
@@ -150,7 +151,7 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">world of tanks</h2>
                             <p class="combine-content__text">
-                                Командный танковый экшен. Более 500 моделей военной техники Второй мировой. 
+                                Командный танковый экшен. Более 500 моделей военной техники Второй мировой.
                                 Многомиллионная армия поклонников. Лучшая онлайн-игра на постсоветском пространстве.
                             </p>
                             <div class="combine-content__platforms">
@@ -219,7 +220,7 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">World of Warships</h2>
                             <p class="combine-content__text">
-                                Массовая многопользовательская онлайн-игра (ММО), которая позволяет окунуться в мир масштабных 
+                                Массовая многопользовательская онлайн-игра (ММО), которая позволяет окунуться в мир масштабных
                                 морских баталий и опробовать в бою легендарные военные корабли первой половины ХХ века.
                             </p>
                             <div class="combine-content__platforms">
@@ -425,7 +426,7 @@
                         <div class="combine-content">
                             <h2 class="combine-content__title">Steel Division 2</h2>
                             <p class="combine-content__text">
-                                Стратегия в жанре wargame, посвящённая Второй мировой войне. Вам предстоит руководить войсками во время операции 
+                                Стратегия в жанре wargame, посвящённая Второй мировой войне. Вам предстоит руководить войсками во время операции
                                 «Багратион» — крупномасштабного советского наступления против вермахта.
                             </p>
                             <div class="combine-content__platforms">
@@ -649,32 +650,7 @@
                 <div class="slider-block">
                     <div class="slider-block__arrows-one"></div>
                     <div class="slider-block__arrows-two"></div>
-                    <div class="slider-block__width">
-                        <div class="slider-block__carousel">
-                            <div style="background: url(./images/slider/1-9-update.jpg) no-repeat right;" class="slider-block__img"></div>
-                            <p class="slider-block__text">Обновление 1.9. Актуальная версия игры</p>
-                        </div>
-                        <div class="slider-block__carousel">
-                            <div style="background: url(./images/slider/playhome3.jpg) no-repeat right;" class="slider-block__img"></div>
-                            <p class="slider-block__text">Участвуй в онлайн-турнирах</p>
-                        </div>
-                        <div class="slider-block__carousel">
-                            <div style="background: url(./images/slider/Q2nHXES.jpg) no-repeat right;" class="slider-block__img"></div>
-                            <p class="slider-block__text">Боевой пропуск: уникальные награды в случайных боях</p>
-                        </div>
-                        <div class="slider-block__carousel">
-                            <div style="background: url(./images/slider/ref-2-0-615.jpg) no-repeat right;" class="slider-block__img"></div>
-                            <p class="slider-block__text">Реферальная программа 2.0: третий сезона</p>
-                        </div>
-                        <div class="slider-block__carousel">
-                            <div style="background: url(./images/slider/specialoffers.jpg) no-repeat right;" class="slider-block__img"></div>
-                            <p class="slider-block__text">Специальные предложения</p>
-                        </div>
-                        <div class="slider-block__carousel">
-                            <div style="background: url(./images/slider/wot_twitchprime.jpg) no-repeat right;" class="slider-block__img"></div>
-                            <p class="slider-block__text">Акция «Прямой эфир». Набор «Звёздная ночь»</p>
-                        </div>
-                    </div>
+                    <div class="slider-block__width"></div>
                 </div>
             </div>
             <div class="block-store">
